(lang dune 2.5)
(name dynjit)
(version 0.1)
(generate_opam_files true)
(maintainers "Taine Zhao")
(homepage "https://github.com/thautwarm/dynjit")
(authors "Taine Zhao <thaut@logic.cs.tsukuba.ac.jp>")
(bug_reports "https://github.com/thautwarm/dynjit/issues")
(package
    (name dynjit)
    (synopsis "Just In Time Compiler for CPython")
    (description "Just In Time Compiler for CPython")
    (depends))